--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+    <title>MUN Manager</title>
+
     <link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
+    <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
 
     <script th:src="@{https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js}"></script>
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js}"></script>
-    <script th:src="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js}"></script>
 
     <link rel="stylesheet" th:href="@{/css/jqueryDataTables.css}">
     <script th:src="@{/js/jqueryDataTables.js}" type="text/javascript"></script>
@@ -16,10 +18,8 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <script th:src="@{/js/script.js}" type="text/javascript"></script>
 
-    <!--  I am using moment.js to properly sort dates on the datatable  -->
+    <!--  I am using moment.js exclusively to sort dates on the datatable  -->
     <script th:src="@{/js/moment.js}" type="text/javascript"></script>
-
-    <title>MUN Manager</title>
 
     <script th:inline="javascript">
         /*<![CDATA[*/
@@ -32,6 +32,13 @@
             });
         });
         /*]]>*/
+
+        $(document).ready(function () {
+            $('.table').on('click', 'tr', function () {
+                const id = $(this).attr('id');
+                console.log(id);
+            });
+        })
     </script>
 </head>
 <body>
@@ -164,17 +171,11 @@
                     <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Delegation</th>
-                        <th>Turnitin Score</th>
-                        <th>Date Submitted</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="student : ${students}" th:id="${student.getStudentId()}">
                         <td th:text="${student.studentName}"></td>
-                        <td th:text="${student.delegation}"></td>
-                        <td th:text="${student.turnitinScore + '%'}"></td>
-                        <td th:text="${#dates.format(student.dateSubmitted, 'MMMM dd, yyyy hh:mm a')}"></td>
                     </tbody>
                 </table>
             </div>
