--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,26 +21,8 @@
     <!--  I am using moment.js exclusively to sort dates on the datatable  -->
     <script th:src="@{/js/moment.js}" type="text/javascript"></script>
 
-
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        $(document).ready(function () {
-            DataTable.datetime('MMMM dd, yyyy hh:mm a');
-            $('.table').DataTable({
-                "paging": true,
-                "info": false,
-                "searching": true
-            });
-        });
-        /*]]>*/
-
-        $(document).ready(function () {
-            $('.table').on('click', 'tr', function () {
-                const id = $(this).attr('id');
-                console.log(id);
-            });
-        })
-    </script>
+    <!--  Has all of my document.ready functions to keep code readable -->
+    <script th:src="@{/js/init.js}" type="text/javascript"></script>
 </head>
 <body>
 <div id="main-content">
@@ -48,7 +30,7 @@
          style="background-image: url(/img/blue-banner.webp); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 0; padding: 3rem 0 3rem 0">
         <div class="container" style="margin-left: 0">
             <div class="row" style="margin-left: 50px">
-                <div class="col-2" onclick="location.reload();" style="cursor: pointer;">
+                <div class="col-2 pointer" onclick="location.reload();">
                     <img alt="Conference Image" class="img-fluid" th:src="@{/img/LOGO2.webp}">
                 </div>
                 <div class="col-10">
@@ -68,11 +50,8 @@
                             th:value="${conference.getConferenceId()}"></option>
                 </select>
                     <h3 class="p-3">Choose an Assignment:</h3>
-                    <label for="assign-select"></label><select class="custom-select" id="assign-select"
-                                                               name="Assignment"
-                                                               th:field="*{assignments}">
-                    <option th:each="assignment : ${assignments}" th:text="${assignment.getAssignmentName()}"
-                            th:value="${assignment.getAssignmentId()}"></option>
+                    <label for="assign-select"></label><select class="custom-select" disabled id="assign-select"
+                                                               name="Assignment">
                 </select>
                     <button class="btn btn-primary btn-block" onclick="logTest()"
                             style="margin-top: 20px; margin-bottom: 20px">Submit
