--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
          style="background-image: url(/img/blue-banner.webp); background-size: cover; background-position: center; background-repeat: no-repeat; margin-bottom: 0; padding: 3rem 0 3rem 0">
         <div class="container" style="margin-left: 0">
             <div class="row" style="margin-left: 50px">
-                <div class="col-2 pointer" onclick="location.reload();">
+                <div class="col-2 pointer" onclick="document.location.replace(window.location.origin)">
                     <img alt="Conference Image" class="img-fluid" th:src="@{/img/LOGO2.webp}">
                 </div>
                 <div class="col-10">
