--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,7 +54,7 @@
                     <label for="assign-select"></label><select class="custom-select" disabled id="assign-select"
                                                                name="Assignment">
                 </select>
-                    <button class="btn btn-primary btn-block" onclick="logTest()"
+                    <button class="btn btn-primary btn-block" onclick="pageSelect()"
                             style="margin-top: 20px; margin-bottom: 20px">Submit
                     </button>
                     <hr class="default-hr" style="margin-bottom: 20px"/>
@@ -131,6 +131,15 @@
                                                           rows="3"></textarea></div>
                                             <div class="form-group"><label for="due-date">Due Date</label> <input
                                                     class="form-control" id="due-date" required type="date"></div>
+                                            <div class="form-group">
+                                                <label for="conference-select">Conference</label>
+                                                <select class="custom-select" id="conference-select" name="Conference"
+                                                        th:field="*{conferences}">
+                                                    <option th:each="conference : ${conferences}"
+                                                            th:text="${conference.getConferenceName()}"
+                                                            th:value="${conference.getConferenceId()}"></option>
+                                                </select>
+                                            </div>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
