--- a/src/main/resources/templates/studentView.html
+++ b/src/main/resources/templates/studentView.html
@@ -35,7 +35,7 @@
                     <img alt="Conference Image" class="img-fluid" th:src="@{/img/LOGO2.webp}">
                 </div>
                 <div class="col-10">
-                    <h1 class="display-4" id="conference-title">Conference Title</h1>
+                    <h1 class="display-4" id="conference-title" th:text="${studentName}"></h1>
                 </div>
             </div>
         </div>
