--- a/src/main/resources/templates/uploadCSV.html
+++ b/src/main/resources/templates/uploadCSV.html
@@ -16,6 +16,8 @@
     <script th:src="@{/js/indexScript.js}" type="text/javascript"></script>
 
     <script th:src="@{/js/globalInit.js}" type="text/javascript"></script>
+
+    <link rel="stylesheet" th:href="@{/css/uploadCSVStyle.css}">
 </head>
 <body>
 <div id="main-content">
@@ -32,17 +34,13 @@
             </div>
         </div>
     </div>
-    <div id="flex" style="display: flex; margin-top: 2rem;">
-        <div class="container-fluid" style="margin-top: 2rem;">
-            <div class="flex-box">
-                <div class="flex-item">
-                    <h1>Upload a Student CSV</h1>
-                    <form action="/api/uploadStudentCSV" method="post" enctype="multipart/form-data">
-                        <input type="file" name="file" id="file">
-                        <input type="submit" value="Upload" name="submit">
-                    </form>
-                </div>
-            </div>
+    <div id="flex" style="display: flex; justify-content: center; align-items: center; margin-top: 2rem; min-height: 64vh;">
+        <div class="flex-item">
+            <h1>Upload a Student CSV</h1>
+            <form action="/api/uploadStudentCSV" enctype="multipart/form-data" method="post">
+                <input id="file" name="file" type="file">
+                <input name="submit" type="submit" value="Upload">
+            </form>
         </div>
     </div>
 </div>
