--- a/src/main/resources/templates/redirect.html
+++ b/src/main/resources/templates/redirect.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        window.location.replace(window.location.origin);
+    });
+</script>
 </body>
 </html>
