--- a/src/main/resources/templates/studentView.html
+++ b/src/main/resources/templates/studentView.html
@@ -40,12 +40,13 @@
             </div>
         </div>
     </div>
-    <div id="flex" style="display: flex; margin-top: 2rem; gap: 5%;">
+    <div id="flex" style="display: flex; margin-top: 2rem; gap: 15%;">
         <div class="col-3">
             <div class="container-fluid">
                 <table aria-label="Table of student information" class="table table-striped">
                     <thead>
                     <tr>
+                        <th>Complete</th>
                         <th>Flagged</th>
                         <th>Assignment Name</th>
                         <th>Submission Date</th>
@@ -55,6 +56,7 @@
                     </thead>
                     <tbody>
                     <tr th:class="${studentAssignment.isFlagged()}" th:each="studentAssignment : ${studentAssignmentsList}">
+                        <td th:text="${studentAssignment.isComplete() ? '✅' : '❌'}"></td>
                         <td>
                             <label>
                                 <input type="checkbox" th:checked="${studentAssignment.isFlagged()}" th:onclick="'toggleFlagged(' + ${studentAssignment.getSubmissionId()} + ')'" />
@@ -69,7 +71,7 @@
                 </table>
             </div>
         </div>
-        <div class="col-8" th:style="'width=100%'">
+        <div class="col-7" th:style="'width=100%'">
             <iframe
                     th:style="'border: 1px solid gray; border-radius: 5px; height: 62.5vh; width:100%'"
                     th:src="${'https://docs.google.com/document/d/e/2PACX-1vT3LfhJcDpTmqfYcnenBfldjIieX9U2mCF1-pUGM7TR1T5jKzmpo7lAqe8A2YCSRibL3Gs_p-vp5xiM/pub?embedded=true'}"></iframe>
